--- a/configure.ac
+++ b/configure.ac
@@ -1,9 +1,9 @@
 AC_PREREQ([2.64])
 AC_INIT([gst-handdetect],
         [0.1],
-        [http://www.freedesktop.org],
+        [],
         [gst-handdetect],
-        [http://www.freedesktop.org])
+        [])
 
 AC_CONFIG_HEADERS([config.h])
 AC_CONFIG_MACRO_DIR([m4])
@@ -21,5 +21,5 @@ LT_INIT
 
 PKG_PROG_PKG_CONFIG()
 PKG_CHECK_MODULES(GST, [gstreamer-0.10 gstreamer-video-0.10 opencv])
-AC_CONFIG_FILES([Makefile])
-AC_OUTPUT
+AC_CONFIG_FILES([Makefile src/Makefile])
+AC_OUTPUT ([Makefile src/Makefile])
