100812-office, updated /examples/Makefile.am for example videoControl.c compilation

--- a/configure.ac
+++ b/configure.ac
@@ -5,6 +5,8 @@ AC_INIT([gst-handdetect],
         [gst-handdetect],
         [])
 
+AG_GST_INIT
+
 AC_CONFIG_HEADERS([config.h])
 AC_CONFIG_MACRO_DIR([m4])
 
@@ -21,5 +23,5 @@ LT_INIT
 
 PKG_PROG_PKG_CONFIG()
 PKG_CHECK_MODULES(GST, [gstreamer-0.10 gstreamer-video-0.10 opencv])
-AC_CONFIG_FILES([Makefile src/Makefile])
-AC_OUTPUT ([Makefile src/Makefile])
+AC_CONFIG_FILES([Makefile src/Makefile examples/Makefile])
+AC_OUTPUT
