--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -1,1 +1,6 @@
-SUBDIRS= videoControl
+noinst_PROGRAMS = videoControl
+
+videoControl_SOURCES = videoControl.c			
+	
+videoControl_CFLAGS = $(GST_CFLAGS) $(GST_BASE_CFLAGS) $(GST_PLUGINS_BASE_CFLAGS)
+videoControl_LDFLAGS = $(GST_LIBS) $(GST_BASE_LIBS) $(GST_PLUGINS_BASE_LIBS) $(GSTPB_BASE_LIBS)
